fix repo file name/ path stuff